--- a/style.css
+++ b/style.css
@@ -1,7 +1,57 @@
-body {
-    background: rgb(102, 85, 8);
+ /* responsive web design */
+ @media screen and (min-width: 120px) and (max-width: 1080px){}
+main {
+    height: 30ch;
+    zoom: 1.5;
+    display: grid;
+  }
+
+  h1 {
+    font-size: 30px;
+  }
+
+  h2 {
+    font-size: 10px;
+  }
+
+  h3 {
+    font-size: 10px;
+  }
+
+  #all-contents {
+    height: 90ch;
+    margin: none;
+  }
+
+  a {
+    font-size: 16px;
+  }
+
+  .sidebar {
+    margin-right: 8px;
+    justify-content:baseline;
+    align-items: center;
+  }
+
+  .sidebar-img {
+    width: 20%;
+  }
+
+  p,
+  li {
+    font-size: 19px;
+  }
+
+  .content {
+    align-content: center;
+    justify-content: center;
+  
+}
+
+ body{
+    background: rgb(11, 87, 122);
     color: rgb(45, 45, 45);
-    padding: 10px;
+    padding: 22px;
     font-family:cursive;
 }
 #all-contents {
@@ -20,7 +70,7 @@ nav {
 h1 {
     display: flex;
     align-items: center;
-    color: rgb(194, 148, 22);
+    color: rgb(19, 116, 107);
     flex: 1;
     margin: 0;
 }
@@ -29,37 +79,37 @@ h1 {
 }
 .nav-li {
     display: inline-block;
-    padding: 0 10px;
+    padding:0 10px;
 }
 a {
-    text-decoration: none;
+    text-decoration: unset;
     color: #ffffff;
 }
 
 /* main container area beneath menu */
 main {
     background: rgba(245, 238, 219, 0.644);
-    display: dashed;
+    display: inline-block;
 }
 .sidebar {
-    margin-right: 25px;
+    margin-right: 190px;
     padding: 10px;
 }
 .sidebar-img {
-    width: 200px;
+    width: 216px;
 }
 .content {
-    flex: 1;
-    padding: 15px;
+    flex: 162;
+    padding: 241px;
 }
 
 /* portfolio styles */
 #interests {
-    border: 4px rgb(197, 216, 87) ridge;
-    padding: 10px;
+    border: 16px rgb(0, 0, 0) medium;
+    padding: 32px;
 }
 h2, h3 {
-    margin: 0px;
+    margin: 17px;
 }
  /* portfolio styles */
  .content h1 {
@@ -67,22 +117,22 @@ h2, h3 {
 }
 
 #portfolio {
-    list-style-type: none;
-    padding-left: 0;
+    list-style-type: dotted;
+    padding-left: 7;
 }
 
 #portfolio li {
     background: #fff;
-    padding: 10px;
-    border-radius: 10px;
-    margin-bottom: 10px;
+    padding: 17px;
+    border-radius: 13px;
+    margin-bottom: 24px;
 }
 
 #portfolio li:hover {
-    background: #eee;
+    background: #eeeeee;
 }
 
 #portfolio a {
-    text-decoration: olive;
+    text-decoration: rgb(54, 126, 40);
     color: #454545;
 }
