--- a/style.css
+++ b/style.css
@@ -82,15 +82,15 @@ h1 {
     padding:0 10px;
 }
 a {
-    text-decoration: block;
-    color: #1e9c77bd;
+    text-decoration: inset;
+    color: #1e6e9cbd;
 }
 
 /* main container area beneath menu */
 main {
     background: rgb(55, 140, 146);
     border-radius:6%;
-    display: 40px flex;
+    display: 40px inset;
 }
 .sidebar {
     margin-right: 500px;
@@ -106,7 +106,7 @@ main {
 
 /* portfolio styles */
 #interests {
-    border: 99px rgba(33, 147, 167, 0.5) groove;
+    border: 99px rgba(255, 255, 255, 0.5) groove;
     border-radius: 6%;
     padding: 9px;
 }
@@ -124,7 +124,7 @@ h2, h3 {
 }
 
 #portfolio li {
-    background: #0fb82b;
+    background: #68d1cc;
     padding: 10px;
     border-radius: 4%;
     margin-bottom: 10px;
@@ -135,6 +135,6 @@ h2, h3 {
 }
 
 #portfolio a {
-    text-decoration: rgb(153, 175, 149);
-    color: #2c78be;
+    text-decoration: rgb(0, 0, 0);
+    color: #000000;
 }
