--- a/asd-projects/walker/index.css
+++ b/asd-projects/walker/index.css
@@ -1,18 +1,19 @@
 
 body {
-  background-color: darkgreen;
+  background-color: rgb(26, 207, 111)
 }
 
 #board {
   width: 440px;
   height: 440px;
   border: 1px solid white;
-  background-color: black;
+  background-color: rgb(240, 232, 9);
   position: relative;
 }
 
-#gameItem {
-  background-color: teal;
+#walker {
+  border-radius: 50px;
+  background-color: rgb(23, 218, 214);
   width: 50px;
   height: 50px;
   position: absolute;
