--- a/asd-projects/walker/index.css
+++ b/asd-projects/walker/index.css
@@ -1,19 +1,19 @@
 
 body {
-  background-color: rgb(26, 207, 111)
+  background-color: rgb(26, 62, 207)
 }
 
 #board {
   width: 440px;
   height: 440px;
-  border: 1px solid white;
-  background-color: rgb(240, 232, 9);
+  border: 1px solid rgb(216, 0, 0);
+  background-color: rgb(240, 148, 9);
   position: relative;
 }
 
 #walker {
   border-radius: 50px;
-  background-color: rgb(23, 218, 214);
+  background-color: rgb(0, 0, 0);
   width: 50px;
   height: 50px;
   position: absolute;
