--- a/asd-projects/debugging-exercise/index.css
+++ b/asd-projects/debugging-exercise/index.css
@@ -1,5 +1,5 @@
 #board {
-    background: black;
+    background: rgb(218, 8, 8);
     width: 300px;
     height: 300px;
     left: 0px;
@@ -8,7 +8,7 @@
 
 
 .circle {
-    background: blue;
+    background: rgb(74, 153, 9);
     width: 20px;
     height: 20px;
     border-radius: 10px;
